# layerhouse

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  dist-workspace.toml
.github/workflows/: ci.yml  pages.yml  release-artifacts.yml
crates/connectors/fake-directory/: Cargo.toml
crates/connectors/fake-directory/src/: lib.rs
crates/layerhouse-ctl/src/: air_gapped.rs
crates/layerhouse-server/: Cargo.toml  build.rs
crates/layerhouse-server/dashboard/: index.html  package.json
crates/layerhouse-server/dashboard/src/: App.tsx  app.css
crates/layerhouse-server/dashboard/src/components/: EmptyState.tsx  ErrorBanner.tsx  Pagination.tsx
crates/layerhouse-server/dashboard/src/lib/: api.ts  format.ts  i18n.ts  theme.ts  types.ts
crates/layerhouse-server/dashboard/src/pages/: Access.tsx  Admin.tsx  Cluster.tsx  ClusterMembers.tsx  HelmCharts.tsx  KubernetesSetup.tsx  Mirror.tsx  MirrorJobs.tsx  MirrorRules.tsx  OAuth2Error.tsx  Overview.tsx  Policies.tsx  ProxyCache.tsx  RepoDetail.tsx  Repositories.tsx  TagDiff.tsx  WarmImages.tsx
crates/layerhouse-server/dashboard/static/: 404.html
crates/layerhouse-server/src/: config.rs  main.rs
crates/layerhouse-server/src/auth/: authorization.rs  cedar_authorizer.rs  cedar_shadow.rs  identity.rs  middleware.rs  mod.rs  oauth2.rs  permissions.rs  principal.rs  session.rs  token.rs  token_endpoint.rs
crates/layerhouse-server/src/config/: directory.rs
crates/layerhouse-server/src/config/directory/: tests.rs  validation.rs
crates/layerhouse-server/src/directory/: http_host.rs  mod.rs  startup.rs  test_api.rs  wasm.rs
crates/layerhouse-server/src/directory/startup/: tests.rs
crates/layerhouse-server/src/mirror/: client.rs  mod.rs
crates/layerhouse-server/src/oci/: manifest.rs
crates/layerhouse-server/src/raft/: mod.rs  router.rs  state_machine.rs
crates/layerhouse-server/src/raft/membership/: mod.rs
crates/layerhouse-server/src/routes/: admin.rs  blobs.rs  catalog.rs  dashboard_api.rs  manifests.rs  mod.rs  pat_api.rs  referrers.rs  session_api.rs  tags.rs  uploads.rs
crates/layerhouse-server/src/routes/namespaces/: handlers.rs  mod.rs  types.rs
crates/layerhouse-server/src/store/metadata/: handle.rs  in_memory.rs  mod.rs  traits.rs  typed_id.rs  types.rs
crates/orb-chrysa-cli/: Cargo.toml
crates/orb-chrysa-server/: Cargo.toml
crates/orb-chrysa-server/dashboard/src/: App.tsx  app.css
crates/orb-chrysa-server/dashboard/src/lib/: api.ts  i18n.ts  types.ts
crates/orb-chrysa-server/dashboard/src/pages/: Access.tsx  Cluster.tsx  Mirror.tsx  OAuth2Error.tsx  ProxyCache.tsx
crates/orb-chrysa-server/src/: config.rs  main.rs
crates/orb-chrysa-server/src/auth/: discovery.rs  middleware.rs  mod.rs  oauth2.rs  permissions.rs  session.rs  token.rs  token_endpoint.rs
crates/orb-chrysa-server/src/mirror/: client.rs  mod.rs
crates/orb-chrysa-server/src/routes/: admin.rs  blobs.rs  dashboard_api.rs  mod.rs  session_api.rs
deploy/binary/: README.md
deploy/binary/systemd/: layerhouse.service
deploy/compose/: Caddyfile  auth-cluster.yml  cluster.yml  standalone-tls.yml  standalone.yml
deploy/compose/config/: standalone-oidc.toml  standalone-tls.toml  standalone.toml
deploy/kubernetes/helm/: Chart.yaml  values.yaml
deploy/kubernetes/helm/templates/: certificates.yaml  configmap.yaml  statefulset.yaml
deploy/kubernetes/helm/test-values/: auth-enabled.yaml  cert-manager.yaml
docs/mdbook/: book.toml
docs/mdbook/src/: SUMMARY.md  authentication.md  configuration.md  dashboard.md  mirror-proxy.md
docs/mdbook/src/architecture/: raft.md
docs/mdbook/src/authentication/: bring-your-own-idp.md  kanidm.md  pat.md  service-accounts.md
docs/mdbook/src/configuration/: auth.md
docs/mdbook/src/deployment/: docker-compose.md  index.md  kubernetes.md
docs/mdbook/src/operations/: health.md  tls-rotation.md
docs/mdbook/src/reference/: api.md  config-reference.md  oci-spec.md
docs/test-plans/: 03-multi-replica-cluster.md  05-repositories-artifact-browser.md  06-mirror-proxy-cache.md  08-production-oci-workflows.md  10-auth-workflows.md  11-air-gapped-k8s-bootstrap.md  12-wasm-kanidm-directory-connector.md  README.md
tests/compose/config/: auth-cluster.toml
tests/compose/kanidm/: kanidm-setup.sh
tests/k8s/: helm-smoke.sh
tests/k8s/tilt/: render-helm.sh
tests/production/: auth-workflow.sh
tests/release/: dry-run.sh
wit/: directory-connector.wit
