[package]
name = "layerhouse-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_urlencoded.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
thiserror.workspace = true
uuid = { workspace = true, features = ["v4", "v7"] }
sha2.workspace = true
hex.workspace = true
bytes.workspace = true
axum = { workspace = true, features = ["macros"] }
tower.workspace = true
tower-http = { workspace = true, features = ["trace", "cors"] }
async-trait.workspace = true
chrono.workspace = true
toml.workspace = true
tokio-util = { workspace = true, features = ["io"] }
futures.workspace = true
aws-sdk-s3.workspace = true
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-credential-types.workspace = true
aws-types.workspace = true
aioduct.workspace = true
http.workspace = true
hyper.workspace = true
http-body-util.workspace = true
openraft.workspace = true
redb.workspace = true
tonic.workspace = true
prost.workspace = true
postcard.workspace = true
axum-server.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rust-embed.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true
aes-gcm.workspace = true
rand.workspace = true

[build-dependencies]
walkdir.workspace = true

[dev-dependencies]
aioduct.workspace = true
tempfile.workspace = true
rcgen.workspace = true
time.workspace = true
httpmock.workspace = true
